2003-06-10  Christian Neumair  <chris@gnome-de.org>

	* *.scm: Replace ":  " by ": ". There is no reason to lengthen the
	status bar messages by one space.

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* dialog.c: 
	* sol.c: Removed separator from dialogs as in HIG.

2003-06-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* events.c: Re-implement the third-button-reveals-card
	thing. Fixes bugs 103646.

2003-06-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* dialog.c: Make the preferences dialog auto-apply and HIG
	compliant. The options are still there, they just look prettier.

2003-06-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* dialog.c: Change the game over/won dialog to be an information
	box rather than a question since the message isn't actually a
	question (although the player does have a choice). Also changed
	the wording to use sentence capitalisation.

	* sol.scm: Do the scheme end of the undo/redo sensitivity code.

	* sol.c (new_game): Set the undo/redo buttons to
	insensitive at the beginning of a game.

	* cscmi.c: The C <-> scheme interface for settings the undo and
	redo button sensitivity.

	* menu.h:
	* menu.c: The C end of the undo/redo sensitivity code.

	* sol.c: Take advantage of the gconf support routines in
	libgames-support.

	* .cvsignore: Ignore the schemas file.

	* dialog.c
	* sol.c
	* menu.c
	* aisleriot.schemas.in: - -> _ because the spec says we can't use
	it.

2003-06-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* dialog.c (property_apply): 
	* sol.h: 
	* Makefile.am: 
	* aisleriot.schemas.in: Aisleriot now uses gconf.

	* sol.c (quit_app): Don't ask if quit has been selected. Trust the
	user.

	* menu.h: 
	* sol.c:
	* menu.c: Reorganised the menu and the toolbar so that they match
	each other in terms of order and tooltips. Also give the hint
	toolbar button the "help" lifesaver that all the other games do.
	Added an option to toggle the toolbar on and off.
	