@@ -1,3 +1,12 @@
+2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* valentine.scm (button-clicked): () is not actually valid
+	scheme. 1.3.4 allowed it 1.6 doesn't. Replaced with the equivalent
+	'(). Fixes bug #114850.
+
+	* dialog.c (show_preferences_dialog): Use games_frame because it
+	looks cool.
+
 2003-06-10  Christian Neumair  <chris@gnome-de.org>
 
 	* *.scm: Replace ":  " by ": ". There is no reason to lengthen the
